logs/dag_id=Automate_cleaning/run_id=scheduled__2024-06-20T06:30:00+00:00/task_id=fetch_raw_data/attempt=1.log
[2024-06-30T09:34:29.115+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: Automate_cleaning.fetch_raw_data scheduled__2024-06-20T06:30:00+00:00 [queued]>
[2024-06-30T09:34:29.255+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: Automate_cleaning.fetch_raw_data scheduled__2024-06-20T06:30:00+00:00 [queued]>
[2024-06-30T09:34:29.269+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2024-06-30T09:34:29.270+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 1
[2024-06-30T09:34:29.271+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2024-06-30T09:34:29.407+0000] {taskinstance.py:1389} INFO - Executing <Task(PythonOperator): fetch_raw_data> on 2024-06-20 06:30:00+00:00
[2024-06-30T09:34:29.438+0000] {standard_task_runner.py:52} INFO - Started process 271 to run task
[2024-06-30T09:34:29.469+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'Automate_cleaning', 'fetch_raw_data', 'scheduled__2024-06-20T06:30:00+00:00', '--job-id', '23', '--raw', '--subdir', 'DAGS_FOLDER/automate_clean_DAG.py', '--cfg-path', '/tmp/tmpnlo94bw0', '--error-file', '/tmp/tmp304lgwf6']
[2024-06-30T09:34:29.489+0000] {standard_task_runner.py:80} INFO - Job 23: Subtask fetch_raw_data
[2024-06-30T09:34:30.055+0000] {task_command.py:371} INFO - Running <TaskInstance: Automate_cleaning.fetch_raw_data scheduled__2024-06-20T06:30:00+00:00 [running]> on host 7ad299a7fc17
[2024-06-30T09:34:30.787+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=devi_nirfana
AIRFLOW_CTX_DAG_ID=Automate_cleaning
AIRFLOW_CTX_TASK_ID=fetch_raw_data
AIRFLOW_CTX_EXECUTION_DATE=2024-06-20T06:30:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2024-06-20T06:30:00+00:00
[2024-06-30T09:35:35.271+0000] {python.py:173} INFO - Done. Returned value was: None
[2024-06-30T09:35:35.291+0000] {taskinstance.py:1412} INFO - Marking task as SUCCESS. dag_id=Automate_cleaning, task_id=fetch_raw_data, execution_date=20240620T063000, start_date=20240630T093429, end_date=20240630T093535
[2024-06-30T09:35:35.376+0000] {local_task_job.py:156} INFO - Task exited with return code 0
[2024-06-30T09:35:35.432+0000] {local_task_job.py:279} INFO - 1 downstream tasks scheduled from follow-on schedule check
[2024-06-30T09:56:41.059+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: Automate_cleaning.fetch_raw_data scheduled__2024-06-20T06:30:00+00:00 [queued]>
[2024-06-30T09:56:41.173+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: Automate_cleaning.fetch_raw_data scheduled__2024-06-20T06:30:00+00:00 [queued]>
[2024-06-30T09:56:41.177+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2024-06-30T09:56:41.178+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 1
[2024-06-30T09:56:41.183+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2024-06-30T09:56:41.257+0000] {taskinstance.py:1389} INFO - Executing <Task(PythonOperator): fetch_raw_data> on 2024-06-20 06:30:00+00:00
[2024-06-30T09:56:41.297+0000] {standard_task_runner.py:52} INFO - Started process 384 to run task
[2024-06-30T09:56:41.311+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'Automate_cleaning', 'fetch_raw_data', 'scheduled__2024-06-20T06:30:00+00:00', '--job-id', '20', '--raw', '--subdir', 'DAGS_FOLDER/automate_clean_DAG.py', '--cfg-path', '/tmp/tmpfs5l0fd_', '--error-file', '/tmp/tmpv2rohje1']
[2024-06-30T09:56:41.322+0000] {standard_task_runner.py:80} INFO - Job 20: Subtask fetch_raw_data
[2024-06-30T09:56:41.851+0000] {task_command.py:371} INFO - Running <TaskInstance: Automate_cleaning.fetch_raw_data scheduled__2024-06-20T06:30:00+00:00 [running]> on host 80cef885917b
[2024-06-30T09:56:42.238+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=devi_nirfana
AIRFLOW_CTX_DAG_ID=Automate_cleaning
AIRFLOW_CTX_TASK_ID=fetch_raw_data
AIRFLOW_CTX_EXECUTION_DATE=2024-06-20T06:30:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2024-06-20T06:30:00+00:00
[2024-06-30T09:56:42.248+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1803, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 719, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "-"
LINE 1: SELECT * FROM fraud-data-table
                           ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/automate_clean_DAG.py", line 60, in fetch_from_postgres
    df = pd.read_sql_query('SELECT * FROM fraud-data-table', conn)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 443, in read_sql_query
    dtype=dtype,
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 1579, in read_query
    result = self.execute(*args)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 1424, in execute
    return self.connectable.execution_options().execute(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1279, in execute
    future=False,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1585, in _exec_driver_sql
    distilled_parameters,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1846, in _execute_context
    e, statement, parameters, cursor, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 2027, in _handle_dbapi_exception
    sqlalchemy_exception, with_traceback=exc_info[2], from_=e
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/util/compat.py", line 207, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1803, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 719, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "-"
LINE 1: SELECT * FROM fraud-data-table
                           ^

[SQL: SELECT * FROM fraud-data-table]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2024-06-30T09:56:42.304+0000] {taskinstance.py:1412} INFO - Marking task as FAILED. dag_id=Automate_cleaning, task_id=fetch_raw_data, execution_date=20240620T063000, start_date=20240630T095641, end_date=20240630T095642
[2024-06-30T09:56:42.360+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 20 for task fetch_raw_data ((psycopg2.errors.SyntaxError) syntax error at or near "-"
LINE 1: SELECT * FROM fraud-data-table
                           ^

[SQL: SELECT * FROM fraud-data-table]
(Background on this error at: https://sqlalche.me/e/14/f405); 384)
[2024-06-30T09:56:42.399+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2024-06-30T09:56:42.544+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
